@@ -1,3 +1,10 @@
+2007-03-19  Mike Kestner  <mkestner@novell.com>
+
+	* ListView.cs : make box selection for Details views without 
+	FullRowSelect dependent on the text bounds, not item bounds.
+	* ListViewItem.cs : add an internal property to obtain the TextBounds
+	in Details view.  [Fixes case 1 of #80374]
+
 2007-03-19  Andreia Gaita  <avidigal@novell.com>
 
 	* PaintEventArgs.cs (Dispose): Only dispose of graphics object if
